--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
 
 		<p>This game is very simple and helps improve your memory, it's fun to compete against others as well.</p>
 
-		<div id="game">
-			<img src="images/back.png" alt="Queen of Diamonds">
-			<img src="images/back.png" alt="Queen of Hearts">
-			<img src="images/back.png" alt="King of Diamonds">
-			<img src="images/back.png" alt="King of Hearts">
-		</div>
+		<button id="reset">Play Again</button>
+		<h2 id='score'>Score: 0</h2>
+
+		<div id="game-board" class="board clearfix"></div>
 	</main>
 	<footer class="clearfix">
 		<p class="copyright">Copyright 2017</p>
-		<p class="message">Created with &hearts; by <span class="name">GA</span></p>
+		<p class="message">Created with &hearts; by <span class="name">Brandon</span></p>
 	</footer>
 
 	<script src="js/main.js"></script>
